[package]
name = "aoc-2022-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-helper = { path = "../aoc-helper" }
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
regex = "1"
itertools = "0.10"
rand = "0.8"
