[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-helper = { path = "../aoc-helper" }
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
regex = "1"
itertools = "0.10"
rand = "0.8"
orx-linked-list = "3.1"
enum-iterator = "1"
lazy_static = "1.5"
once_cell = "1.20"
generic_once_cell = "0.1"
